# spacetraders

./: .gitignore  Cargo.toml  cool-uni.txt  history.txt
res/: names.txt
src/: main.rs  main.rsx
