[package]
name = "spacetraders"
version = "0.1.0"
edition = "2024"

[dependencies]
# Rust has no built-in RNG
rand = "0.9.2"
# Cross-platform readline
rustyline = "12"
# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# ANSI escape codes dont work on Windows by default
colored = "2.0"

